<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUpdateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapCharacters"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateSalary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/salary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUpdateSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateDesignation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/designation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUpdateDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapCharacters"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdateSalary"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/update_salary" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>